se añade cambio del responsive

--- a/styles.css
+++ b/styles.css
@@ -121,8 +121,8 @@ left: 2vw;
 .btn a {
     position: absolute;
     text-decoration: none;
-	top: 26vw;
-	right: 45vw;
+	top: 28vw;
+	right: 43.5vw;
     text-transform: uppercase;
     background: #ff3131;
     color: #fff;
@@ -163,6 +163,49 @@ left: 2vw;
     transform: scale(1.8);
 }
 
+@media screen and (max-width: 768px) {
+
+.img img{
+position: absolute;
+top: 40vw;
+left: -10vw;
+height: 90vw;
+}
+
+span{
+font-size: 15vw;
+position: absolute;
+top: -65vw;
+left: 5vw;
+transform: rotate(0deg);
+white-space: nowrap;
+}
+
+p{
+font-size: 7vw;
+color:rgb(0, 0, 0);
+position: absolute;
+top: -40vw;
+left: -50vw;
+transform: rotate(0deg);
+white-space: nowrap;
+}
+
+.btn a{
+position: absolute;
+top: 170vw;
+}
+
+nav{
+display: none;
+}
+
+.line-two {
+position: absolute;
+left: 36vw;
+}
+}
+
 @media screen and (max-width:390px){
 
 .img img{
@@ -193,7 +236,7 @@ white-space: nowrap;
 
 .btn a{
 position: absolute;
-top: 180vw;
+top: 170vw;
 }
 
 nav{
